fix(ai): keep controller test on java 17